@@ -1,3 +1,7 @@
+2014-05-06 Lubos Dolezel <lubos@dolezel.info>
+	* Source/NSCFDate.m,
+	  Source/CFDate.c: CFDateRef toll-free bridging
+
 2014-04-20 Lubos Dolezel <lubos@dolezel.info>
 	* Source/CFRunLoop.c,
 	  Tests/CFRunLoop/timers.m: CFRunLoop timer fixes and tests
